--- a/vs/i3d.vcxproj.filters
+++ b/vs/i3d.vcxproj.filters
@@ -9,9 +9,15 @@
     <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="setup.cpp" />
+    <ClCompile Include="..\src\GameEngine.cpp" />
+    <ClCompile Include="..\src\Input.cpp" />
+    <ClCompile Include="..\src\Ship.cpp" />
+    <ClCompile Include="..\src\Arena.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="setup.h" />
+    <ClInclude Include="..\src\Input.h" />
+    <ClInclude Include="..\src\GameEngine.h" />
+    <ClInclude Include="..\src\Ship.h" />
+    <ClInclude Include="..\src\Arena.h" />
   </ItemGroup>
 </Project>
